public/css/main.css
.metrics {
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border-bottom: 1px solid #a3a5ad;
}
.metrics > div {
  -webkit-flex: 1 1 33.3%;
      -ms-flex: 1 1 33.3%;
          flex: 1 1 33.3%;
  padding: 20px;
}
.metrics > div:first-child {
  border-right: 1px solid #a3a5ad;
}
.metrics > div:last-child {
  border-left: 1px solid #a3a5ad;
}
marvel-cluster-status > div {
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}
marvel-cluster-status > div .clusters {
  padding: 5px 10px;
  -webkit-align-self: center;
      -ms-flex-item-align: center;
          align-self: center;
  background-color: #666977;
  color: #ffffff;
  margin-right: 10px;
}
marvel-cluster-status > div .clusters a.dropdown-toggle {
  color: #ffffff;
}
marvel-cluster-status > div .clusters .dropdown-menu {
  padding: 0;
  margin: 0;
  border-radius: 0;
}
marvel-cluster-status > div .clusters .dropdown-menu > li {
  padding: 0;
  margin: 0;
  border-top: 1px solid #d1d2d6;
}
marvel-cluster-status > div .clusters .dropdown-menu > li:first-child {
  border-top: 0;
}
marvel-cluster-status > div .clusters .dropdown-menu > li > a {
  padding: 5px 10px;
}
marvel-cluster-status > div .clusters .dropdown-menu > li.red {
  border-left: 4px solid #dc3c3c;
}
marvel-cluster-status > div .clusters .dropdown-menu > li.red > a:hover {
  background-color: #dc3c3c;
}
marvel-cluster-status > div .clusters .dropdown-menu > li.yellow {
  border-left: 4px solid #f3bc18;
}
marvel-cluster-status > div .clusters .dropdown-menu > li.yellow > a:hover {
  background-color: #f3bc18;
  color: #232123;
}
marvel-cluster-status > div .clusters .dropdown-menu > li.green {
  border-left: 4px solid #94c63d;
}
marvel-cluster-status > div .clusters .dropdown-menu > li.green > a:hover {
  background-color: #94c63d;
}
marvel-cluster-status > div .stats {
  background-color: #666977;
  color: #ffffff;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-grow: 1;
      -ms-flex-positive: 1;
          flex-grow: 1;
}
marvel-cluster-status > div .stats .status.green {
  color: #ffffff;
  background-color: #94c63d;
}
marvel-cluster-status > div .stats .status.green a {
  color: #ffffff;
}
marvel-cluster-status > div .stats .status.red {
  color: #ffffff;
  background-color: #dc3c3c;
}
marvel-cluster-status > div .stats .status.red a {
  color: #ffffff;
}
marvel-cluster-status > div .stats .status.yellow {
  color: #232123;
  background-color: #f3bc18;
}
marvel-cluster-status > div .stats .status.yellow a {
  color: #232123;
}
marvel-cluster-status > div .stats > div {
  -webkit-align-self: center;
      -ms-flex-item-align: center;
          align-self: center;
  padding: 5px 10px;
}
marvel-chart h4 {
  text-align: right;
  margin-bottom: 0;
}
marvel-chart h2 {
  font-weight: bold;
  text-align: right;
  margin-top: 0;
}
marvel-chart .chart {
  min-height: 200px;
  background-color: #a3a5ad;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}
marvel-chart .chart > div {
  color: #d1d2d6;
  font-size: 17px;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-justify-content: center;
      -ms-flex-pack: center;
          justify-content: center;
  -webkit-align-items: center;
      -ms-flex-align: center;
          align-items: center;
  -webkit-flex: 1 1 auto;
      -ms-flex: 1 1 auto;
          flex: 1 1 auto;
}
marvel-issues h3 {
  margin-top: 0;
}
marvel-issues h3 .count {
  font-size: 0.6em;
}
marvel-issues .fa-fire {
  color: #dc3c3c;
}
marvel-issues .fa-warning {
  color: #f3bc18;
}
marvel-issues li {
  padding-bottom: 5px;
}
marvel-issues li.no-results {
  text-align: center;
  color: #a3a5ad;
}
marvel-issues li.no-results .fa {
  font-size: 80px;
}
marvel-issues li.no-results h6 {
  font-size: 28px;
}
marvel-shard-activity {
  display: block;
  padding: 20px;
}
marvel-shard-activity tr.done {
  color: #a3a5ad;
}
marvel-shard-activity tr.done:hover {
  color: #666977;
}
marvel-shard-activity td {
  vertical-align: middle !important;
}
marvel-shard-activity p {
  margin: 0;
}
marvel-shard-activity table {
  border-bottom: 2px solid #a3a5ad;
}
marvel-shard-activity h5 {
  font-size: 20px;
  font-weight: bold;
  margin: 0;
}
marvel-shard-activity h6 {
  font-size: 18px;
  margin: 0;
}
marvel-shard-activity .source-dest > div {
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}
marvel-shard-activity .source-dest > div > div {
  -webkit-flex: 1 1 auto;
      -ms-flex: 1 1 auto;
          flex: 1 1 auto;
  -webkit-align-items: center;
      -ms-flex-align: center;
          align-items: center;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}
marvel-index-listing {
  display: block;
  padding: 20px;
}
marvel-index-listing table {
  border-bottom: 2px solid #a3a5ad;
}
marvel-index-listing td,
marvel-index-listing th {
  text-align: right;
}
marvel-index-listing td:first-child,
marvel-index-listing th:first-child {
  text-align: left;
}
marvel-index-listing td {
  font-size: 16px;
}
marvel-index-listing .pagination {
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}
marvel-index-listing .pagination ul {
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1 1 auto;
      -ms-flex: 1 1 auto;
          flex: 1 1 auto;
  -webkit-justify-content: center;
      -ms-flex-pack: center;
          justify-content: center;
}
marvel-index-listing .pagination li {
  padding: 0 5px;
  display: inline-block;
}
.marvel-settings form > .row {
  border-bottom: 1px solid #a3a5ad;
}
.marvel-settings form > .row:first-child {
  border-top: 1px solid #a3a5ad;
}
/***************************/
/****** MarvelCharts! ******/
/***************************/
/* Hide the vertical x-axis lines   */
.nv-axis.nv-x line {
  display: none;
}
/* Hide the Left most vertical line */
.nv-axis.nv-y .domain {
  display: none;
}
/* increase the line stroke width */
.nv-linesWrap .nv-line {
  stroke-width: 2.5px !important;
}
/* Make the min max ticks not bold */
.nvd3 .nv-axis .nv-axisMaxMin text {
  font-weight: normal !important;
}
.nvd3 .nv-axis .nv-axisMaxMin text,
.nv-axis .tick > text {
  font-weight: normal !important;
  color: #444;
  fill: #444;
  font-size: 10px;
}
.nvd3 .nv-axis.nv-x path.domain {
  stroke-opacity: 1;
  stroke: #e5e5e5;
}
.marvel-view {
  -webkit-flex-grow: 1;
      -ms-flex-positive: 1;
          flex-grow: 1;
  background-color: #eff0f1;
  padding: 10px;
}
.marvel-view .marvel-element {
  margin-bottom: 10px;
}
.marvel-view .table > thead > tr > th {
  border-color: #a3a5ad;
}
.marvel-view .table > tbody > tr > th,
.marvel-view .table > tfoot > tr > th,
.marvel-view .table > thead > tr > td,
.marvel-view .table > tbody > tr > td,
.marvel-view .table > tfoot > tr > td {
  border-color: #d1d2d6;
}
.marvel-view .table {
  border-bottom: 1px solid #d1d2d6;
  margin-bottom: 0;
}
.marvel-view th {
  font-weight: normal;
}
.marvel-view .fa-bolt {
  color: #dc3c3c;
}
.marvel-view .fa-warning {
  color: #dc3c3c;
}
marvel-issue-summary > div {
  padding: 5px;
  background-color: #ffffff;
  border-top: 2px solid #a3a5ad;
}
marvel-issue-summary > div.red {
  border-color: #dc3c3c;
}
marvel-issue-summary > div.yellow {
  border-color: #f3bc18;
}
marvel-issue-summary > div h1 {
  font-size: 24px;
  margin: 0 0 5px 0;
  color: #232123;
}
marvel-issue-summary > div .summary {
  color: #666977;
  font-size: 24px;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}
marvel-issue-summary > div .summary .fa-bolt,
marvel-issue-summary > div .summary .fa-warning {
  color: #666977 !important;
}
marvel-issue-summary > div .summary.red .fa-bolt {
  color: #dc3c3c !important;
}
marvel-issue-summary > div .summary.red .total {
  color: #dc3c3c;
}
marvel-issue-summary > div .summary.yellow .fa-warning {
  color: #f3bc18 !important;
}
marvel-issue-summary > div .summary.yellow .total {
  color: #f3bc18;
}
marvel-issue-summary > div .summary .icon {
  font-size: 0.8em;
  min-width: 40px;
  text-align: center;
  -webkit-align-self: center;
      -ms-flex-item-align: center;
          align-self: center;
}
marvel-issue-summary > div .summary .total {
  -webkit-flex-grow: 1;
      -ms-flex-positive: 1;
          flex-grow: 1;
  text-align: right;
}
.issues .view .summary {
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}
.issues .view .summary marvel-issue-summary {
  -webkit-flex: 1 1 auto;
      -ms-flex: 1 1 auto;
          flex: 1 1 auto;
  margin: 0 5px;
}
.issues .view .issues-table {
  background-color: #ffffff;
  border-top: 2px solid #a3a5ad;
  padding: 0 5px 5px;
}
.issues .view .fa-bolt {
  color: #dc3c3c;
}
.issues .view span.icon {
  display: inline-block;
  width: 20px;
  text-align: center;
}
.issues .view span.node,
.issues .view span.index,
.issues .view span.field {
  color: #232123;
}
.issues .view span.node::after,
.issues .view span.index::after {
  content: ':';
}
.issues .view td {
  color: #a3a5ad;
}
.issues .view .type {
  text-transform: capitalize;
}
.issues .view .fa-warning {
  color: #f3bc18;
}
.issues .view .no-results {
  color: #a3a5ad;
  text-align: center;
  padding: 40px;
}
.issues .view .no-results h1 {
  margin-top: 0;
}
.issues .view .no-results .fa {
  font-size: 100px;
}
.issues .view div.filters {
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border-bottom: 2px solid #a3a5ad;
}
.issues .view div.filters .totals {
  color: #666977;
  -webkit-flex-grow: 1;
      -ms-flex-positive: 1;
          flex-grow: 1;
  -webkit-align-self: center;
      -ms-flex-item-align: center;
          align-self: center;
  text-align: right;
  padding-right: 20px;
}
.issues .view div.filters .totals a {
  color: #666977;
}
.issues .view div.filters .filter,
.issues .view div.filters .filter-label {
  -webkit-flex: 0 0 auto;
      -ms-flex: 0 0 auto;
          flex: 0 0 auto;
}
.issues .view div.filters .filter-label {
  color: #666977;
  font-weight: bold;
  margin: 0 20px 0 60px;
  -webkit-align-self: center;
      -ms-flex-item-align: center;
          align-self: center;
}
.issues .view div.filters .filter-label:first-child {
  margin: 0 20px 0 0;
}
.issues .view div.filters .filter {
  cursor: pointer;
  margin: 5px 1px;
  background-color: #ffffff;
  color: #666977;
  padding: 5px 10px;
  font-size: 0.9em;
  border: 1px solid #d1d2d6;
}
.issues .view div.filters .filter.red {
  color: #dc3c3c;
  border-color: #dc3c3c;
}
.issues .view div.filters .filter.red .fa-bolt {
  color: #dc3c3c;
}
.issues .view div.filters .filter.yellow {
  color: #f3bc18;
  border-color: #f3bc18;
}
.issues .view div.filters .filter.yellow .fa-bolt {
  color: #f3bc18;
}
.issues .view div.filters .filter.active {
  background-color: #a3a5ad;
  color: #ffffff;
}
.issues .view div.filters .filter.active.red {
  background-color: #dc3c3c;
}
.issues .view div.filters .filter.active.red .fa-warning,
.issues .view div.filters .filter.active.red .fa-bolt {
  color: #ffffff;
}
.issues .view div.filters .filter.active.yellow {
  background-color: #f3bc18;
  color: #232123;
}
.issues .view div.filters .filter.active.yellow .fa-warning,
.issues .view div.filters .filter.active.yellow .fa-bolt {
  color: #232123;
}

